# data-analysis-for-engineers

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml
data/: bolts.csv
examples/bolt-calculator/: bolt-func.py  bolt-obj.py
examples/duckdb/: README.md  bearings_data.json  duckdb_example.py
examples/handson-mlp/: .gitignore  02_end_to_end_machine_learning_project.ipynb  housing-eda.ipynb
examples/qdrant/: README.md  bearings_data.json  qdrant_example.py
examples/sqlalchemy/: bearings_data.json  sqlalchemy_example.py
examples/titanic/: titanic-eda.ipynb
tasks/lab3-numerical/: README.md  strain_measurements.csv
tasks/lab4-data/: README.md  config.yaml
tasks/lab5-eda/: xxxxxx-eda.ipynb
