[project]
name = "data-analysis-for-engineers"
version = "0.1.0"
description = "Data Analysis for Engineers course materials"
readme = "README.md"
authors = [
    { name = "Marek Piotr Mysior" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "src"
module-root = ""